# balager

./: .gitignore  .vercelignore  Cargo.toml  Dioxus.toml  README.md  vercel.json
.claude/: settings.json
api/: main.rs
assets/: manifest.json  styles.css
design/design-handoff/: README.md
design/design-handoff/project/: .thumbnail  Balager.html  app.jsx  common.jsx  data.jsx  discussions.jsx  icons.jsx  info.jsx  notifications.jsx  reservations.jsx  settings.jsx  shell.jsx  styles.css  tasks.jsx
docs/: PLAN.md
migrations/: 0001_init.sql
public/assets/: main-dxh8ebb51a4284b5f.js  main_bg-dxha87be79f3257c5.wasm  manifest-dxh13dd2d6d5e93a62a.json  styles-dxh371d2363b15421ca.css
public/wasm/: main.js
scripts/: build-client.sh  dev.sh  vercel-build.sh
shell/: index.html  main_bg.wasm
src/: app.rs  common.rs  data.rs  discussions.rs  icons.rs  info.rs  lib.rs  login.rs  main.rs  models.rs  notifications.rs  reservations.rs  settings.rs  shell.rs  state.rs  tasks.rs
src/api/: auth.rs  discussions.rs  mod.rs  notifications.rs  reservations.rs  tasks.rs  users.rs
src/backend/: auth.rs  db.rs  mod.rs  notify.rs
src/domain/: discussions.rs  mod.rs  notifications.rs  reservations.rs  tasks.rs  users.rs
