[package]
name = "balager"
version = "0.1.0"
edition = "2021"

# The single binary: on Vercel it runs as a Fluid function (via vercel_runtime),
# locally / self-hosted it is a normal HTTP server serving ./public + the API.
[lib]
name = "balager"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "api/main.rs"

[dependencies]
dioxus = { version = "0.7.3", features = ["fullstack"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# server-only
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
vercel_runtime = { version = "2.2", features = ["axum"], optional = true }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring", "macros", "migrate"], optional = true }
argon2 = { version = "0.5", optional = true }
rand = { version = "0.8", optional = true }
http = { version = "1", optional = true }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname", "pool"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

# Vercel's Rust builder runs `cargo build --bin main` with default features,
# so the default build must be the server.
[features]
default = ["server"]
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:tokio",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:vercel_runtime",
    "dep:sqlx",
    "dep:argon2",
    "dep:rand",
    "dep:http",
    "dep:lettre",
    "dep:tracing",
    "dep:tracing-subscriber",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
